--- a/app/src/main/res/layout/activity_serialintent.xml
+++ b/app/src/main/res/layout/activity_serialintent.xml
@@ -7,4 +7,23 @@
     android:layout_height="match_parent"
     tools:context=".serialintent">
 
+    <Button
+        android:id="@+id/btn_hackit"
+        android:layout_width="153dp"
+        android:layout_height="56dp"
+        android:text="Hack It!"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent" />
+
+    <TextView
+        android:id="@+id/txt_flag"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="23dp"
+        android:text="Flag : "
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/btn_hackit" />
 </androidx.constraintlayout.widget.ConstraintLayout>
