--- a/app/src/main/res/layout/activity_jokeprovider.xml
+++ b/app/src/main/res/layout/activity_jokeprovider.xml
@@ -5,16 +5,15 @@
     android:id="@+id/main"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".justlisten">
-
+    tools:context=".jokeprovider">
     <TextView
         android:id="@+id/txt_hash"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginTop="23dp"
-        android:text="Broadcast receiver launched!"
+        android:text="Flag :"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
+        app:layout_constraintTop_toTopOf="parent"/>
 </androidx.constraintlayout.widget.ConstraintLayout>
